@@ -3,6 +3,7 @@
 	- Display related boards in recent posts tooltip op homepage
 	- Added search box on user list
 	- Proper support for multilingual releases
+	- Copy-add release feature
 
 2.4 - 2009-06-07
 	- Release search + browser + filters
